--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,7 +1,11 @@
 :root {
   // accent
-  --color-main-900: #d42b39;
-  --color-main-700: #dc3845;
+  --color-main-900: #dc3845;
+  --color-main-700: #6b242b;
+  --color-main-500: #6e2129;
+
+  // secondary
+  --color-secondary-100: #18a716;
 
   // light
   --color-light-100: #fff;
